# feedcat

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
doc/source/img/: architecture.drawio
doc/source/markdown/: tutorial_add_properties.md
lib/: CMakeLists.txt
src/backend/: Article.cpp  Article.hpp  ArticlePropertyHash.cpp  ArticlePropertyHash.hpp  ArticlePropertyInterface.cpp  ArticlePropertyInterface.hpp  CMakeLists.txt  Feed.cpp  Feed.hpp  Provider.cpp  Provider.hpp  article.cpp  article.hpp  property_save_templates.hpp
src/backend/core/: Article.cpp  Article.hpp  ArticlePropertyHash.cpp  ArticlePropertyHash.hpp  ArticlePropertyInterface.hpp  CMakeLists.txt  Feed.hpp  Provider.cpp  Provider.hpp  SingleValueProperty.hpp  property_save_templates.hpp
src/backend/core/db/: SanitizedString.cpp  SanitizedString.hpp  database_interface.cpp  database_interface.hpp  database_types.hpp  property_serialize_functions.hpp
src/backend/core/exceptions/: ArticleBasePropertyRequiredError.hpp
src/backend/core/network/: FullTextParserStrategy.hpp  parser_rss.cpp  parser_rss.hpp
src/backend/core/properties/: ArticleBaseProperty.cpp  ArticleBaseProperty.hpp  ArticleBasePropertyDb.cpp  ArticleBasePropertyDb.hpp
src/backend/core/properties/date/: DateProperty.hpp  DatePropertyDb.hpp
src/backend/core/properties/fulltext/: FulltextProperty.hpp  FulltextPropertyDb.hpp
src/backend/db/: CMakeLists.txt  article_database.cpp  database_interface.cpp  database_interface.hpp  database_sqlite.cpp  database_sqlite.hpp
src/backend/extension/: CMakeLists.txt
src/backend/extension/db_impl/: database_sqlite.cpp  database_sqlite.hpp  db_structure.md
src/backend/extension/fulltextparser_impl/: Ntv.hpp
src/backend/network/: parser_rss.cpp  parser_rss.hpp
src/backend/network/fulltextImpl/: Ntv.cpp
src/backend/properties/: ArticleBaseProperty.cpp  ArticleBaseProperty.hpp  ArticleBasePropertyDb.hpp
src/backend/rss/: FullTextParserStrategy.hpp  Provider.cpp  Provider.hpp  ProviderInterface.hpp  parser_fulltext.hpp  parser_rss.cpp  parser_rss.hpp  url.cpp  url.hpp  xml_parser.hpp
src/backend/rss/fulltextImpl/: Ntv.cpp  Ntv.hpp
src/backend/rss/parser_fulltext_impl/: Ntv.cpp  Ntv.hpp
src/backend/rss/provider_implementation/: Ntv.hpp
src/backend/src/: article.hpp
src/backend/src/db/: article_database.hpp
src/backend/src/rss/: article.hpp
src/backend/src/rss/parser_fulltext_impl/: Ntv.hpp
src/console/: CMakeLists.txt  main.cpp
src/helper/: helper_tinyxml2.cpp  helper_tinyxml2.hpp
src/rss/: article.cpp  article.hpp  parser_fulltext.hpp  xml_parser.cpp  xml_parser.hpp
src/rss/parser_fulltext_impl/: Ntv.hpp
src/tui/: main.cpp
tests/: CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/backend/core/: tests_ArticlePropertyHash.cpp  tests_ArticlePropertyHash.hpp  tests_SingleValueProperty.cpp  tests_SingleValueProperty.hpp
tests/backend/core/db/: tests_SanitizedString.cpp  tests_SanitizedString.hpp
tests/backend/extension/sqlite/: tests_store_load.cpp  tests_store_load.hpp
